# python-ssr-autumn-template

./: .env.example  README.md  main.py  pyproject.toml
routes/: __init__.py
templates/: index.html
